feat: Remove pylint disable comments and add a script to validate imports and syntax across the application

--- a/backend/.pylintrc
+++ b/backend/.pylintrc
@@ -291,6 +291,8 @@ disable =
 	django-not-configured,
 	consider-using-with,
 	bad-option-value,
+	imported-auth-user,
+	import-error,
 
 [REPORTS]
 output-format = text
