fix: Update pylint plugins and improve pytest markers descriptions

--- a/backend/.pylintrc
+++ b/backend/.pylintrc
@@ -1,7 +1,7 @@
 [MASTER]
 ignore = migrations
 persistent = yes
-load-plugins = pylint_django,pylint_celery
+load-plugins = pylint_django
 
 [MESSAGES CONTROL]
 enable = 
