--- a/backend/pytest.ini
+++ b/backend/pytest.ini
@@ -4,6 +4,6 @@ python_files = tests.py test_*.py *_tests.py
 addopts = -v --tb=short --strict-markers
 testpaths = tests
 markers =
-    unit: Unit tests
-    integration: Integration tests
-    api: API tests
+    unit: marks tests as unit tests
+    integration: marks tests as integration tests
+    api: marks tests as API tests
