--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -5,3 +5,8 @@ pytest>=8.0.0
 pytest-django>=4.8.0
 pytest-factoryboy>=2.6.0
 factory-boy>=3.3.0
+pytest-cov>=4.1.0
+tox>=4.0.0
+python-dotenv>=1.0.0
+python-dotenv>=1.0.0
+django-dotenv>=1.4.2
